# tauri-play

./: .hintrc  AGENTS.md  CLAUDE.md  DB.md  DEVNOTE.md  README.md  form.md  package.json  pnpm-lock.yaml  product.md  quyche.md  tailwind.config.cjs  vite.config.ts
.claude/: settings.local.json
scripts/: bootstrap.ps1
specs/: 001-teachable-machine-overview.md  002-product-scope.md  003-image-classification-core.md  004-camera-capture-flow.md  005-ml-lab.md
src/: App.tsx  AppProvider.tsx  main.tsx  routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_image_classification_core.sql  0001_create_todos.sql  0002_add_order_to_classes_and_samples.sql  0003_add_sample_metadata.sql  0004_add_sample_media_metadata.sql  0005_add_model_train_logs.sql  0006_create_app_settings.sql  0007_add_settings_to_classes.sql  0008_sample_file_name_only.sql
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: index.css
src/components/camera/: CameraCapture.tsx  CameraUI.tsx  SvgCrop.tsx  SvgFlip.tsx  types.ts  useCamera.ts  useCapture.ts  useCaptureSound.ts
src/components/form/: index.tsx
src/components/headless/: ContentEditable.tsx
src/components/home/: HomeCtaFooter.tsx  (+9 more)
src/constants/: storage.ts
src/lib/: todo-db.ts
src/providers/: AppProvider.tsx
src/router/: index.tsx
src/routes/: __root.tsx  about.tsx  camera.tsx  examples.$exampleId.tsx  index.tsx  ml-lab.tsx  todos.tsx
src/styles/: index.css
src/theme/: index.ts
(+99 files in other folders)
